--- a/index.html
+++ b/index.html
@@ -44,28 +44,39 @@
         </section>
 
         <article class="recent-posts">
-          <div class="recent-posts-wrapper">
-            <header class="recent-posts__header">
-              <h2 class="recent-posts__header">Recent posts</h2>
-              <a class="recent-posts__all-posts" href="#">View all</a>
-            </header>
-            <div class="recent-posts__posts-wrapper">
-              <div class="recent-posts__post">
-                <h3 class="post__nane">Making a design system from scratch</h3>
-                <div class="post__about-post">
-                  <div class="about-post__date">12 Feb 2020</div>
-                  <div class="about-post__tags">Disign, Pattern</div>
-                </div>
-                <p class="post__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </p>
+          <header class="recent-posts__header">
+            <h2 class="recent-posts__header__tytle">Recent posts</h2>
+            <a class="recent-posts__header__all-posts" href="#">View all</a>
+          </header>
+          <div class="recent-posts__posts-wrapper">
+            <div class="recent-posts__post">
+              <h3 class="post__name">Making a design system from scratch</h3>
+              <div class="post__about-post">
+                <div class="about-post__date">12 Feb 2020</div>
+                <div class="about-post__tags">Disign, Pattern</div>
               </div>
-               
+              <p class="post__text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
             </div>
+
+            <div class="recent-posts__post">
+              <h3 class="post__name">Creating pixel perfect icons in Figma</h3>
+              <div class="post__about-post">
+                <div class="about-post__date">12 Feb 2020</div>
+                <div class="about-post__tags">Figma, Icon Design</div>
+              </div>
+              <p class="post__text">
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                amet sint. Velit officia consequat duis enim velit mollit.
+                Exercitation veniam consequat sunt nostrud amet.
+              </p>
+            </div>
+
+            
           </div>
-         <div class="recent-posts__substrate"></div>
         </article>
       </main>
       <footer></footer>
