feat: add class recent-posts

--- a/index.html
+++ b/index.html
@@ -74,10 +74,87 @@
                 Exercitation veniam consequat sunt nostrud amet.
               </p>
             </div>
-
-            
           </div>
         </article>
+        <section class="featured-works">
+          <h2 class="featured-works__tytle">Featured works</h2>
+          <div class="featured-works__list">
+            <div class="featured-works__item">
+              <img class="eatured-works__item__img"
+                src="./image/designing-dashboards.png"
+                alt="designing-dashboards"
+              />
+              <div class="featured-works__item__about">
+                <h3 class="featured-works__item__about__tytle">
+                  Designing Dashboards
+                </h3>
+                <div class="featured-works__item__about__info">
+                  <div class="featured-works__item__about__info__date">
+                    2020
+                  </div>
+                  <div class="featured-works__item__about__info__tags">
+                    Dashboard
+                  </div>
+                </div>
+                <div class="featured-works__item__about__text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
+                </div>
+              </div>
+            </div>
+
+            <div class="featured-works__item">
+              <img class="eatured-works__item__img"
+                src="./image/vibrant-portraits.png"
+                alt="designing-dashboards"
+              />
+              <div class="featured-works__item__about">
+                <h3 class="featured-works__item__about__tytle">
+                  Vibrant Portraits of 2020
+                </h3>
+                <div class="featured-works__item__about__info">
+                  <div class="featured-works__item__about__info__date">
+                    2018
+                  </div>
+                  <div class="featured-works__item__about__info__tags">
+                    Illustration
+                  </div>
+                </div>
+                <div class="featured-works__item__about__text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
+                   Velit officia consequat duis enim velit mollit. Exercitation veniam 
+                   consequat sunt nostrud amet.
+                </div>
+              </div>
+            </div>
+
+            <div class="featured-works__item">
+              <img class="eatured-works__item__img"
+                src="./image/36-days.png"
+                alt="designing-dashboards"
+              />
+              <div class="featured-works__item__about">
+                <h3 class="featured-works__item__about__tytle">
+                  36 Days of Malayalam type
+                </h3>
+                <div class="featured-works__item__about__info">
+                  <div class="featured-works__item__about__info__date">
+                    2018
+                  </div>
+                  <div class="featured-works__item__about__info__tags">
+                    Typography
+                  </div>
+                </div>
+                <div class="featured-works__item__about__text">
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do 
+                  amet sint. Velit officia consequat duis enim velit mollit. Exercitation
+                  veniam consequat sunt nostrud amet.
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
       <footer></footer>
     </div>
