--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
           <h2 class="featured-works__tytle">Featured works</h2>
           <div class="featured-works__list">
             <div class="featured-works__item">
-              <img class="eatured-works__item__img"
+              <img
+                class="eatured-works__item__img"
                 src="./image/designing-dashboards.png"
                 alt="designing-dashboards"
               />
@@ -105,7 +106,8 @@
             </div>
 
             <div class="featured-works__item">
-              <img class="eatured-works__item__img"
+              <img
+                class="eatured-works__item__img"
                 src="./image/vibrant-portraits.png"
                 alt="designing-dashboards"
               />
@@ -122,15 +124,16 @@
                   </div>
                 </div>
                 <div class="featured-works__item__about__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint.
-                   Velit officia consequat duis enim velit mollit. Exercitation veniam 
-                   consequat sunt nostrud amet.
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
                 </div>
               </div>
             </div>
 
             <div class="featured-works__item">
-              <img class="eatured-works__item__img"
+              <img
+                class="eatured-works__item__img"
                 src="./image/36-days.png"
                 alt="designing-dashboards"
               />
@@ -147,16 +150,40 @@
                   </div>
                 </div>
                 <div class="featured-works__item__about__text">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do 
-                  amet sint. Velit officia consequat duis enim velit mollit. Exercitation
-                  veniam consequat sunt nostrud amet.
+                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                  amet sint. Velit officia consequat duis enim velit mollit.
+                  Exercitation veniam consequat sunt nostrud amet.
                 </div>
               </div>
             </div>
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer>
+        <div class="footer-wrapper">
+          <ul class="subscription-panel">
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__facebook" href="#"
+                ></a
+              >
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__instagram" href="#"
+                ></a
+              >
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__twitter" href="#"></a>
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__linkedin" href="#"
+                ></a
+              >
+            </li>
+          </ul>
+          <div class="copyright">Copyright &copy 2020 All rights reserved</div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
