--- a/index.html
+++ b/index.html
@@ -12,10 +12,20 @@
     <div class="super-container">
       <header class="header">
         <nav class="header__nav">
+          <!-- <input id="menu-toggle" type="checkbox" />
+          <label class="menu-button-container" for="menu-toggle">
+            <div class="menu-button"></div>
+          </label> -->
+          <div class="header__nav__gamburger-container">
+            <button class="header__nav__gamburger"></button>
+          </div>
+
           <ul class="header__nav__list">
-            <li class="header__nav__item">Works</li>
-            <li class="header__nav__item">Blog</li>
-            <li class="header__nav__item">Contact</li>
+            <li class="header__nav__item"><a href="#">Works</a></li>
+            <li class="header__nav__item"><a href="./blog.html">Blog</a></li>
+            <li class="header__nav__item">
+              <a href="./contact.html">Contact</a>
+            </li>
           </ul>
         </nav>
       </header>
@@ -163,27 +173,22 @@
         <div class="footer-wrapper">
           <ul class="subscription-panel">
             <li class="subscription-panel__item">
-              <a class="subscription-panel__item__facebook" href="#"
-                ></a
-              >
+              <a class="subscription-panel__item__facebook" href="#"></a>
             </li>
             <li class="subscription-panel__item">
-              <a class="subscription-panel__item__instagram" href="#"
-                ></a
-              >
+              <a class="subscription-panel__item__instagram" href="#"></a>
             </li>
             <li class="subscription-panel__item">
               <a class="subscription-panel__item__twitter" href="#"></a>
             </li>
             <li class="subscription-panel__item">
-              <a class="subscription-panel__item__linkedin" href="#"
-                ></a
-              >
+              <a class="subscription-panel__item__linkedin" href="#"></a>
             </li>
           </ul>
           <div class="copyright">Copyright &copy 2020 All rights reserved</div>
         </div>
       </footer>
     </div>
+    <script src="./index.js"></script>
   </body>
 </html>
