--- a/index.html
+++ b/index.html
@@ -185,6 +185,6 @@
         </div>
       </footer>
     </div>
-    <script src="./index.js"></script>
+    <script src="./burger-menu.js"></script>
   </body>
 </html>
