refactor: сделал фото на главной странице адаптивным, увеличил кликабельную площадь в бургере

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
           </div>
 
           <ul class="header__nav__list">
-            <li class="header__nav__item"><a href="#">Works</a></li>
+            <li class="header__nav__item"><a href="#">Home</a></li>
+            <li class="header__nav__item"><a href="./work.html">Works</a></li>
             <li class="header__nav__item"><a href="./blog.html">Blog</a></li>
             <li class="header__nav__item">
               <a href="./contact.html">Contact</a>
@@ -43,9 +44,24 @@
           <div class="about-my-work__photo">
             <img
               class="about-my-work__photo__img"
+              sizes="calc(10.7vw + 121px)"
+              srcset="
+                ./image/Jon-634-634_oejat1_c_scale,w_254.png 254w,
+                ./image/Jon-634-634_oejat1_c_scale,w_340.png 340w,
+                ./image/Jon-634-634_oejat1_c_scale,w_413.png 413w,
+                ./image/Jon-634-634_oejat1_c_scale,w_479.png 479w,
+                ./image/Jon-634-634_oejat1_c_scale,w_539.png 539w,
+                ./image/Jon-634-634_oejat1_c_scale,w_601.png 601w,
+                ./image/Jon-634-634_oejat1_c_scale,w_634.png 634w
+              "
+              src="./image/Jon-634-634_oejat1_c_scale,w_634.png"
+              alt="my-photo"
+            />
+            <!-- <img
+              class="about-my-work__photo__img"
               src="./image/my-photo.png"
               alt="моё фото"
-            />
+            /> -->
           </div>
         </section>
 
