--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,8 @@
           </div>
 
           <ul class="header__nav__list">
-            <li class="header__nav__item"><a href="./index.html">Works</a></li>
+            <li class="header__nav__item"><a href="./index.html">Home</a></li>
+            <li class="header__nav__item"><a href="./work.html">Works</a></li>
             <li class="header__nav__item"><a href="#">Blog</a></li>
             <li class="header__nav__item">
               <a href="./contact.html">Contact</a>
