feat: add page works

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 
           <ul class="header__nav__list">
             <li class="header__nav__item"><a href="./index.html">Home</a></li>
-            <li class="header__nav__item"><a href="./work.html">Works</a></li>
+            <li class="header__nav__item"><a href="./works.html">Works</a></li>
             <li class="header__nav__item"><a href="#">Blog</a></li>
             <li class="header__nav__item">
               <a href="./contact.html">Contact</a>
