feat: add contacts

--- a/blog.html
+++ b/blog.html
@@ -21,7 +21,7 @@
             <li class="header__nav__item"><a href="./works.html">Works</a></li>
             <li class="header__nav__item"><a href="#">Blog</a></li>
             <li class="header__nav__item">
-              <a href="./contact.html">Contact</a>
+              <a href="./contact.html">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -100,5 +100,7 @@
       </footer>
     </div>
     <script src="./burger-menu.js"></script>
+    <script src="./highlight-navigation-element.js"></script>
+
   </body>
 </html>
