--- a/works.html
+++ b/works.html
@@ -21,7 +21,7 @@
             <li class="header__nav__item"><a href="#">Works</a></li>
             <li class="header__nav__item"><a href="./blog.html">Blog</a></li>
             <li class="header__nav__item">
-              <a href="./contact.html">Contact</a>
+              <a href="./contact.html">Contacts</a>
             </li>
           </ul>
         </nav>
@@ -138,5 +138,8 @@
         </div>
       </footer>
     </div>
+    <script src="./burger-menu.js"></script>
+    <script src="./highlight-navigation-element.js"></script>
+
   </body>
 </html>
