feat: add добавил какой то скрипт для отлеживания ошибки less

--- a/contact.html
+++ b/contact.html
@@ -1,61 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet/less" type="text/css" href="./style/contacts.less">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet/less" type="text/css" href="./style/contacts.less" />
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
     <title>contacts</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="super-container">
-        <header class="header">
-          <nav class="header__nav">
-            <div class="header__nav__gamburger-container">
-              <button class="header__nav__gamburger"></button>
-            </div>
-  
-            <ul class="header__nav__list">
-              <li class="header__nav__item"><a href="./index.html">Home</a></li>
-              <li class="header__nav__item"><a href="./works.html">Works</a></li>
-              <li class="header__nav__item"><a href="./blog.html">Blog</a></li>
-              <li class="header__nav__item">
-                <a href="#">Contacts</a>
-              </li>
-            </ul>
-          </nav>
-        </header>
-        <main>
-            <h1>Contacts</h1>
-         <section class="contacts">
-            <p class="contacts-mail">Вы можете написать мне в почту <a href="mailto:prigulnov@mail.ru">prigulnov@mail.ru</a></p>
-            <p>или</p>
-            <p class="contacts-tel">позвонить по номеру <a href="tel:+79043897863">+7-904-389-78-63</a></p>
-           
-         </section>
-        </main>
-        <footer>
-          <div class="footer-wrapper">
-            <ul class="subscription-panel">
-              <li class="subscription-panel__item">
-                <a class="subscription-panel__item__facebook" href="#"></a>
-              </li>
-              <li class="subscription-panel__item">
-                <a class="subscription-panel__item__instagram" href="#"></a>
-              </li>
-              <li class="subscription-panel__item">
-                <a class="subscription-panel__item__twitter" href="#"></a>
-              </li>
-              <li class="subscription-panel__item">
-                <a class="subscription-panel__item__linkedin" href="#"></a>
-              </li>
-            </ul>
-            <div class="copyright">Copyright &copy 2020 All rights reserved</div>
+      <header class="header">
+        <nav class="header__nav">
+          <div class="header__nav__gamburger-container">
+            <button class="header__nav__gamburger"></button>
           </div>
-        </footer>
-      </div>
-      <script src="./burger-menu.js"></script>
-      <script src="./highlight-navigation-element.js"></script>
-</body>
+
+          <ul class="header__nav__list">
+            <li class="header__nav__item"><a href="./index.html">Home</a></li>
+            <li class="header__nav__item"><a href="./works.html">Works</a></li>
+            <li class="header__nav__item"><a href="./blog.html">Blog</a></li>
+            <li class="header__nav__item">
+              <a href="#">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+      </header>
+      <main>
+        <h1>Contacts</h1>
+        <section class="contacts">
+          <p class="contacts-mail">
+            Вы можете написать мне в почту
+            <a href="mailto:prigulnov@mail.ru">prigulnov@mail.ru</a>
+          </p>
+          <p>или</p>
+          <p class="contacts-tel">
+            позвонить по номеру <a href="tel:+79043897863">+7-904-389-78-63</a>
+          </p>
+        </section>
+      </main>
+      <footer>
+        <div class="footer-wrapper">
+          <ul class="subscription-panel">
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__facebook" href="#"></a>
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__instagram" href="#"></a>
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__twitter" href="#"></a>
+            </li>
+            <li class="subscription-panel__item">
+              <a class="subscription-panel__item__linkedin" href="#"></a>
+            </li>
+          </ul>
+          <div class="copyright">Copyright &copy 2020 All rights reserved</div>
+        </div>
+      </footer>
+    </div>
+    <script src="./burger-menu.js"></script>
+    <script src="./highlight-navigation-element.js"></script>
+  </body>
 </html>
