--- a/blog.html
+++ b/blog.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script type="text/javascript">less = { env: 'development' };</script>
     <link rel="stylesheet/less" type="text/css" href="./style/blog.less" />
     <script src="https://cdn.jsdelivr.net/npm/less"></script>
     <title>My blog</title>
@@ -101,6 +102,5 @@
     </div>
     <script src="./burger-menu.js"></script>
     <script src="./highlight-navigation-element.js"></script>
-
   </body>
 </html>
